--- a/css/responsive.css
+++ b/css/responsive.css
@@ -9,8 +9,15 @@
     .footer-bottom{flex-direction: row; justify-content: space-between;}
     .footer-bottom .left{align-items: flex-start;}
     .footer-bottom .right{align-items: flex-end;}
-}
 
+    section .container .section-title{font-size: 28px;}
+    .swiper-section-2 .swiper-bottom-contact{flex-direction: row; justify-content: space-around;}
+
+    .product-card .footer{width: 85%;}
+}
+@media only screen and (min-width:992px){
+    .swiper-bottom-contact .contact-links{flex-direction: row;}
+}
 @media only screen and (min-width:1200px){
     .top-navbar{flex-direction: row;justify-content: space-between;}
     .top-navbar .left{width: auto;justify-content: space-between;}
