--- a/css/responsive.css
+++ b/css/responsive.css
@@ -16,6 +16,30 @@
     .product-card .footer{width: 95%;}
 
     .general-wrapper-right .filters-wrapper .left-filters{flex-direction: row;}
+    .button-group-col .btn-group a{width: 40px;height: 40px;}
+
+    .color-button{margin: 10px; border-radius: 30px;}
+    .color-button .image img{
+        height: 200px; 
+        border-radius: 30px 30px 0 0;
+    }
+    .color-button .name{
+        padding: 10px 18px;
+        font-size: 14px;
+        border-radius: 0 0 30px 30px;
+        text-align: start;
+    }
+    .color-shade{margin: 10px;border-radius: 30px;}
+    .color-shade a img{
+        height: 180px; 
+        border-radius: 30px 30px 0 0;
+    }
+    .color-shade .name{
+        padding: 10px 20px;
+        font-size: 14px;
+        border-radius: 0 0 30px 30px;
+        text-align: start;
+    }
 }
 @media only screen and (min-width:992px){
     .swiper-bottom-contact .contact-links{flex-direction: row;}
@@ -32,6 +56,8 @@
     .alt-category-links .alt-link{font-size: 16px;}
 
     .footer-links{align-items: flex-start;}
+    
+    .catalog-buttons button{min-width: auto;}
 }
 @media only screen and (min-width:1400px){
     .bottom-nav-link{font-size: 18px;}
