--- a/css/main.css
+++ b/css/main.css
@@ -280,6 +280,12 @@ section .container .section-title{
     padding: 5px 0;
     font-weight: 700;
 }
+.page-heading .alt-wrapper{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
 .hover-absolute-div{
     position: absolute;
@@ -1056,13 +1062,13 @@ footer .container{
     color: var(--color-1);
     font-weight: 700;
 }
-.product-card .anbar-value{
+.anbar-value{
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 10px 0;
 }
-.product-card .anbar-value .icon{ 
+.anbar-value .icon{ 
     width: 20px;
     height: 20px;
     border-radius: 50%;
@@ -2252,22 +2258,151 @@ textarea.form-control{
 .product-list.soft .product-button.basket .disabled{
     justify-content: center;
 }
+.remove-button{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    color: #fff;
+    background-color: var(--color-1);
+    opacity: 0.4;
+}
+.remove-button:hover{
+    opacity: 1;
+}
 .lists-wrapper .remove-button{
     position: absolute;
     top: 0;
     right: 0;
     margin: 10px;
-    opacity: 0.4;
-    color: #fff;
-    background-color: var(--color-1);
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-}
-.lists-wrapper .remove-button:hover{
-    opacity: 1;
 }
 .product-list.tech li:first-child {
     background: #fff;
     border: 0;
+}
+
+
+.remove-all-button img{
+    padding: 0 5px;
+    padding-bottom: 5px;
+}
+
+/*---------BASKET---------*/
+.basket-table-wrapper{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+}
+
+.basket-table{
+    width: 100%;
+    min-width: 1000px;
+}
+.basket-table tr{
+    border-bottom: 1px solid var(--black-2);
+}
+.basket-table th,td{
+    padding: 15px 0;
+    text-align: center;
+}
+
+.image-cell img{
+    width: 120px;
+    height: 120px; 
+    object-fit: contain;
+}
+.name-brand{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.name-brand .brand{
+    font-size: 14px;
+    color: #969696;
+}
+.name-brand .name{
+    font-size: 18px;
+    font-weight: 500;
+}
+.basket-table .color{
+    color: #969696;
+}
+.basket-table .weight{
+    color: #969696;
+}
+.basket-table .product-price,
+.basket-table .product-total-price{
+    color: var(--color-1);
+    font-size: 18px;
+    font-weight: 700;
+}
+.basket-table .remove-button{
+    margin: auto;
+}
+.amount-wrapper{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.cp-counter{
+    padding: 15px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f5f5f5;
+    border-radius: 5px;
+}
+.cp-counter button{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #D1D1D1;
+    color: #fff;
+    font-size: var(--fs-5);
+}
+.cp-counter button:active{transform: scale(1.4);}
+.cp-counter button:hover{background-color: var(--color-1);}
+.cp-counter .cp-number{
+    min-width: 50px;
+    text-align: center;
+    font-size: 18px;
+}
+.basket-bottom-wrapper{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    margin-top: 40px;
+    padding: 20px 0;
+}
+.total-sum-wrapper{
+    display: flex;
+    align-items: center;
+    padding: 10px 0;
+}
+.total-sum-wrapper .label{
+    font-weight: 700;
+    margin-right: 35px;
+}
+.total-sum-wrapper .total-sum{
+    color: var(--color-1);
+    font-size: 18px;
+    font-weight: 700;
+}
+.confirm-basket{
+    padding: 15px;
+    font-size: 18px;
+    color: #fff;
+    font-weight: 700;
+    background-color: var(--color-1);
+    width: 50%;
+    min-width: 150px;
+    max-width: 300px;
+    border-radius: 10px;
+    margin: 15px 0;
+}
+.confirm-basket:hover{
+    background-color: #4BB543;
+    animation: pulse-green 1s ease infinite;
 }
